deploy/resources/generation/resources/generation/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-model-manager-app/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-SASModelManager
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-model-manager-app
    sas.com/admin: namespace
  name: sas-model-manager-app
spec:
  host: $(INGRESS_HOST)
  path: /SASModelManager
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-model-manager-app
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-SASModelManager
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-model-manager-app
    sas.com/admin: namespace
  name: sas-model-manager-app-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /SASModelManager
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-model-manager-app
  wildcardPolicy: Subdomain
